k8s/deployments-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daksh-interior-server
  namespace: daksh-in
spec:
  replicas: 2
  selector:
    matchLabels:
      app: daksh-server
  template:
    metadata:
      labels:
        app: daksh-server
    spec:
      containers:
        - name: server-container
          image: shiv6933/daksh-server:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"     # 10% of a CPU core
              memory: "256Mi" # Node.js base footprint + buffer
            limits:
              cpu: "500m"     # Allow up to half a core during heavy API requests
              memory: "512Mi" # Plenty of room for those 5MB photo/video uploads!
