k8s/service-external.yaml
apiVersion: v1
kind: Service
metadata: 
  name: daksh-external-service
  namespace: daksh-in
spec: 
  type: ClusterIP
  selector:
    app: daksh-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
