k8s/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: daksh-frontend-service
  namespace: daksh-in
spec:
  type: ClusterIP
  selector:
    app: daksh-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
