k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daksh-ingress
  namespace: daksh-in
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
   - http:
       paths:
         - path: /()(api/.*)
           pathType: ImplementationSpecific
           backend:
             service:
               name: daksh-external-service
               port:
                 number: 80
         - path: /()(.*)
           pathType: ImplementationSpecific
           backend:
             service:
               name: daksh-frontend-service
               port:
                 number: 80
